--- a/styles/package-support/tool-bar.less
+++ b/styles/package-support/tool-bar.less
@@ -59,8 +59,8 @@ copyright   Copyright (C) 2016-2017 Tuomas Hatakka                              
   background: @background-color-dark;
   justify-content: center;
   align-items: center;
-  flex-wrap: nowrap;
-  padding: @component-padding / 2 @component-padding;
+  flex-wrap: nowrap !important;
+  padding: @component-padding / 3 @component-padding;
 
   hr, .tool-bar-spacer {
     margin: 0 @component-padding }
